package sensorservice.domain.enums;

public enum MeasurementSource {
    MANUAL_FORM,
    IOT_SIMULATED
}
